# Terminal_To_Do_List

./: .gitignore  CMakeLists.txt  ToDo.txt  a.out  fileConfig.cpp  fileConfig.h  main.cpp  menu.cpp  menu.h  toDoAction.cpp  toDoActions.h
.cache/clangd/index/: fileConfig.cpp.7028F681A7A7A2B7.idx  fileConfig.h.332A9BC50206E83A.idx  main.cpp.B8C23F122FCD2C0F.idx  menu.cpp.A940501B7B62DFAD.idx  menu.h.10A7C80D4FCA9B02.idx  toDoAction.cpp.25E156F91E75FB4D.idx  toDoAction.h.3F385248E4B5EBEE.idx
.github/workflows/: ci.yml
include/: fileConfig.h  toDoAction.h
src/: menu.cpp  toDoAction.cpp
